<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">JWanAndroid</string>
    <!--button-->
    <string name="bt_login">登录</string>
    <string name="bt_signup">注册</string>
    <string name="bt_commit">提交</string>
    <!--textView-->
    <string name="tv_to_register">—没有账号？去注册—</string>
    <!--welcome words-->
    <string name="tv_welcome"/>
    <!--hint-->
    <string name="hint_account">账号</string>
    <string name="hint_password">密码</string>
    <string name="hint_password_confirm">确认密码</string>
    <string name="error_no_account">请输入账号</string>
    <string name="error_no_password">请输入密码</string>
    <string name="error_confirm_password">两次输入密码不一致</string>
    <string name="back_tips">再按一次退出程序</string>
    <string name="hint_search_articles">用空格隔开多个关键词</string>
    <string name="hint_user_name">去登录</string>
    <string name="hint_level">等级:17</string>
    <string name="hint_integral">积分:549</string>
    <string name="hint_id">id:12331</string>
    <string name="hint_rank">排行:20</string>
    <!-- response_error -->
    <string name="network_unavailable_tip">网络连接不可用,请检查网络设置!</string>
    <string name="error_fail_to_connect">连接到服务器失败</string>
    <string name="error_login_expired">您还未登录，请重新登录</string>
    <string name="error_connect_time_out">连接超时</string>
    <string name="error_socket_time_out">服务器响应超时</string>
    <string name="error_server_error">服务器错误</string>
    <string name="error_parse">数据解析异常</string>
    <string name="error_unknown">未知错误</string>
    
    <!-- bottom title -->
    <string name="title_home">首页</string>
    <string name="title_structure">体系</string>
    <string name="title_public">公众号</string>
    <string name="title_nav">导航</string>
    <string name="title_project">项目</string>
    <string name="title_wenda">问答</string>
    
    <!-- article -->
    <string name="art_author">作者</string>
    <string name="art_date">2019–08–02</string>
    <string name="art_title">这里是WanAndroid的文章标题</string>
    <string name="art_desc">这里是WanAndroid的文章描述：从前有座山，山里有座庙，庙里有个老和尚和小和尚，老和尚对小和尚说：有座山，山里有座庙，庙里有个老和尚和小和尚，老和尚对小和尚说</string>
    <string name="art_type">干货资源/课程推荐</string>
    
    <!-- article tags -->
    <string name="article_tag_top">置顶</string>
    <string name="article_tag_new">新</string>
    <string name="article_tag_qa">问答</string>
    
    <!-- description-->
    <string name="toolbar_more">更多</string>
    
    <!-- search -->
    <string name="search_hot">热门搜索</string>
    <string name="search_his">历史搜索</string>
    
    <!--  dialog  -->
    <string name="dialog_clear_history">确定要清除搜索历史？</string>
    
    <!-- drawerMenu -->
    <string name="drawer_ranking">我的积分</string>
    <string name="drawer_collection">我的收藏</string>
    <string name="drawer_share">我的分享</string>
    <string name="drawer_todo">TODO</string>
    <string name="drawer_settings">系统设置</string>
    <string name="drawer_about_us">关于我们</string>
    <string name="drawer_logout">退出登录</string>
    <string name="navi_todo">TODO</string>
    
    <string name="hint_date">2019&#8211;12&#8211;13</string>
    <string name="hint_todo_title">标题</string>
    <string name="hint_todo_content">内容</string>
    <string name="hint_todo_deadline">截止日期</string>
    <string name="hint_todo_priority">优先级</string>
    <string name="hint_is_important">是否重要</string>
    
    <string name="long_text">hint_todo_contenthint_todo_contenthint_todo_contenthint_todo_contenthint_todo_contenthint_todo_contenthint_todo_contenthint_todo_contenthint_todo_contenthint_todo_contenthint_todo_contenthint_todo_contenthint_todo_contenthint_todo_contenthint_todo_content/hint_todo_content</string>
    
    <string name="title_warm_tips">温馨提示</string>
    <string name="tip_unsave">当前有未保存的内容，确认退出登录？</string>
    
    <!-- todoMenu -->
    <string name="mark_delete">删除</string>
    <string name="mark_done">完成</string>
    <string name="mark_unDone">未完成</string>
    <string name="mark_important">重要</string>
    <string name="drawer_open">打开抽屉</string>
    <string name="drawer_close">关闭抽屉</string>
    
    <string name="share_tips">1. 只要是任何好文都可以分享哈，并不一定要是原创！投递的文章会进入广场 tab;\n
2. CSDN，掘金，简书等官方博客站点会直接通过，不需要审核;\n
3. 其他个人站点会进入审核阶段，不要投递任何无效链接，测试的请尽快删除，否则可能会对你的账号产生一定影响;\n
4. 目前处于测试阶段，如果你发现500等错误，可以向我提交日志，让我们一起使网站变得更好。\n
5. 由于本站只有我一个人开发与维护，会尽力保证24小时内审核，当然有可能哪天太累，会延期，请保持佛系...</string>
    
    <string name="article_title">文章标题</string>
    <string name="refresh_title">刷新标题</string>
    <string name="article_link">文章链接</string>
    <string name="open_link">打开链接</string>
    <string name="text_limit_100">100字以内</string>
    <string name="eg_article_link">如：https://www.jianshu.com/p/a8673ec5acd3</string>
    
    <string name="status_error">哎呀，出现错误啦</string>
    <string name="status_empty">这里还没有数据哦</string>
    <string name="status_loading">正在努力加载中</string>
    <string name="status_network">网络好像有点问题</string>
    
    <string name="choose_image_sourse">请选择图片来源</string>
    <string name="camera">相机</string>
    <string name="album">相册</string>
    

</resources>
