<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/base_bg_color">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    
        <include layout="@layout/include_toolbar"/>
        
        <RelativeLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:id="@+id/tvArcTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:text="@string/article_title"/>
        
            <TextView
                android:id="@+id/tvRefresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:text="@string/refresh_title"/>
            
            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:layout_below="@+id/tvArcTitle"
                android:hint="@string/text_limit_100"
                android:textSize="14sp"/>
            
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:id="@+id/tvLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:text="@string/article_link"/>
            
            <TextView
                android:id="@+id/tvOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:text="@string/open_link"/>
            
            <EditText
                android:id="@+id/etLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:layout_below="@+id/tvLink"
                android:hint="@string/eg_article_link"
                android:textSize="14sp"/>
        
        </RelativeLayout>
    
    </LinearLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:lineSpacingExtra="5dp"
        android:layout_alignParentBottom="true"
        android:text="@string/share_tips"
        android:textSize="12sp"/>
    
</RelativeLayout>