<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_corner_top_dialog"
    android:padding="5dp">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:maxLines="1"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/choose_image_sourse"
        android:textColor="@color/text_color_second"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line_divider"/>
    
    <TextView
        android:id="@+id/tvCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:maxLines="1"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/camera"
        android:textColor="@color/colorPrimary"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line_divider"/>
    
    <TextView
        android:id="@+id/tvAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:maxLines="1"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/album"
        android:textColor="@color/colorAccent"/>
    
</LinearLayout>
