<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="true"
    android:focusable="true"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:scrollbars="vertical">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl_root"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">
    
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_launcher_web"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_name" />
        
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivLogo"
            android:layout_marginTop="30dp"
            android:theme="@style/EditTextTheme"
            app:hintAnimationEnabled="false"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_account"/>
        </android.support.design.widget.TextInputLayout>
        
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilUser"
            android:theme="@style/EditTextTheme"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        
        
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_login"
            android:layout_below="@+id/tilPassword"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
        
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btLogin"
            android:layout_marginTop="30dp"
            android:text="@string/tv_to_register"
            android:textColor="@color/colorPrimary"
            android:gravity="center"/>
        
    </RelativeLayout>

</ScrollView>