<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlNavHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_maxHeight="@dimen/dp_200"
    android:background="@color/colorPrimary">
    
    <ImageView
        android:id="@+id/icRanking"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_5"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_ranking" />
    
    <LinearLayout
        android:id="@+id/llLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_5"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/tvIntegral"
        android:gravity="center"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/tvLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12"
            tools:text="@string/hint_level" />
        
        <TextView
            android:id="@+id/tvRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12"
            tools:text="@string/hint_rank" />
    
    </LinearLayout>
    
    <TextView
        android:id="@+id/tvUserName"
        tools:text="@string/hint_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivAvatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_5"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/tvIntegral"
        tools:text="@string/hint_integral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12"
        android:layout_below="@+id/tvUserName"/>
    
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAvatar"
        android:layout_width="@dimen/dp_95"
        android:layout_height="@dimen/dp_95"
        android:layout_below="@+id/icRanking"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:padding="1dp"
        android:src="@drawable/ic_avatar" />
    
    <pers.jay.wanandroid.widgets.PoemTextView
        android:id="@+id/tvPoem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llLevel"
        tools:text="晓看红湿处，花重锦官城"
        android:textColor="@color/white"
        android:maxLines="2"
        android:textSize="16sp"
        android:gravity="center" />
    
</RelativeLayout>
